[tool.poetry]
name = "iucr-cpd-round-robin-on-quantitative-phase-analysis-dataset"
version = "0.1.0"
description = ""
license = "Apache-2.0"
readme = "README.md"
authors = ["Kevin T. Chu <kevin@velexi.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.2.1"
black = "^23.3.0"
flake8 = "^6.0.0"
dvc = {extras = ["s3"], version = "^2.52.0"}
fastds = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
