[tool.poetry]
name = "iucr-cpd-quantitative-phase-analysis-dataset"
version = "0.1.0"
description = "IUCr CPD Quantitative Phase Analysis Dataset"
license = "Apache-2.0"
readme = "README.md"
authors = ["Kevin T. Chu <kevin@velexi.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3"
black = "^24"
flake8 = "^7"
dvc = {extras = ["s3"], version = "^3"}
fastds = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
